--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>bd-eye</title>
+  <title>Beady Eye</title>
 </head>
 <body>
   <div id="app"></div>
